--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "parcel src/index.html",
     "prebuild": "rm -rf dist",
     "build": "parcel build --public-url /weather-app/ src/index.html",
-    "push-dist": "push-dir --dir=dist --branch=gh-pages"
+    "push-dist": "push-dir --dir=dist"
   },
   "repository": {
     "type": "git",
