--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "test": "parcel src/index.html",
-    "prebuild": "rm -rf dist",
+    "serve": "parcel src/index.html",
+    "prebuild": "shx rm -rf dist",
     "build": "parcel build --public-url /weather-app/ src/index.html",
     "push-dist": "push-dir --dir=dist --branch=gh-pages"
   },
@@ -20,10 +20,24 @@
   },
   "homepage": "https://github.com/denislukianenko/weather-app#readme",
   "devDependencies": {
+    "autoprefixer": "^9.4.9",
     "cssnano": "^4.1.10",
-    "sass": "^1.17.2"
+    "glslify-bundle": "^5.1.1",
+    "glslify-deps": "^1.3.1",
+    "sass": "^1.17.2",
+    "shx": "^0.3.2"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1% in UA",
+    "not dead"
+  ],
+  "postcss": {
+    "plugins": {
+      "autoprefixer": true
+    }
   }
 }
