Fetching data and spreding it

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "shx": "^0.3.2"
   },
   "dependencies": {
+    "heat-index": "0.0.3",
     "normalize.css": "^8.0.1"
   },
   "browserslist": [
